base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1-dev
  template:
    metadata:
      labels:
        app: app1-dev
    spec:
      imagePullSecrets: 
      - name: regcred
      containers:
      - name: app1-dev
        image: mariocalipo.jfrog.io/mariocalipo-docker-local/image-dev:latest 
        ports:
          - containerPort: 8080
        livenessProbe:     
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:  
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 5
        resources:
          limits:
            memory: 1024Mi
          requests:
            memory: 256Mi
