base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-dev
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: app1-dev
  type: NodePort
